# modular_feather

./: README.md
aeronavics_purchases/: __manifest__.py  inventory.xml  purchase.py
arodoo_stock_barcode/models/: stock_pack_operation.py
esc/: CMakeLists.txt  esc_set_params.cpp  platform_linux.cpp
ethGui-WIRIS/: Wiris_controller.pro  main.qml
ethGui-WIRIS/components/: ConnectionWindow.qml
ethGui-WIRIS/src/: controllercore.cpp  controllercore.h  helperthread.cpp  helperthread.h  thermalthread.cpp  thermalthread.h
label/report/: dynamic_label.py  dynamic_label.xml
odoo/aeronavics_purchases/: __init__.py  __manifest__.py  inventory.py
odoo/mrp_bom_structure_xlsx_anv_v3/: __manifest__.py
odoo/mrp_bom_structure_xlsx_anv_v3/report/: bom_structure_xlsx.py
odoo/mrp_bom_structure_xlsx_anv_v5/: __manifest__.py
odoo/mrp_bom_structure_xlsx_anv_v5/report/: bom_structure_xlsx.py
odoo/mrp_bom_structure_xlsx_anv_v6/: __manifest__.py
odoo/mrp_bom_structure_xlsx_anv_v6/report/: bom_structure_xlsx.py  bom_structure_xlsx.xml
